--- a/codigo/relatorio.tex
+++ b/codigo/relatorio.tex
@@ -100,13 +100,7 @@ baixa letalidade - aproximadamente 2,4\% - , observando o gráfico
 (figura 2) entre pessoas contaminadas e curadas podemos concluir que os
 números sao condizentes nessa população.
 
-\begin{figure}
-\centering
-\includegraphics[width=0.35\textwidth,height=\textheight]{./graficos/infectados-curados.jpg}
-\caption{Figura 2 - Infectados/Curados/Obitos}
-\end{figure}
-
-Observacoes sobre o gráfico
+\includegraphics[width=0.5\textwidth,height=\textheight]{}
 
 Nota-se diferença no número de casos em rede pública e privada,
 relacionado diretamente a situação econômica, a maior parte da população
